Update TestAndroidLogcatOracle to support Java 11